@@ -29,8 +29,8 @@
 // features.
 //--------------------------------------------------------------
 
-// Should skill casting be cancelled when inflicted by curse/stun/sleep/etc (includes silence)?
-status_cast_cancel: no
+// Should skill casting be cancelled when inflicted by curse/stun/sleep/etc (includes silence) [Note 4]?
+status_cast_cancel: 0
 
 // Will certain skill status-changes be removed on logout?
 // This mimics official servers, where Extremity Fist's no SP regen,
